<resources>
    <string name="app_name">SidebarNavigation</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="services">Services</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="navigation_header_image">Navigation Header Image</string>
    <string name="akhilesh_garg">Akhilesh Garg</string>
    <string name="nav_draw_open">Showing All Options</string>
    <string name="nav_draw_close">Navigation Drawable Menu</string>
    <string name="welcome">Welcome,</string>
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="password_page">Password Page</string>
    <string name="contact_activity">Contact Activity</string>
    <string name="about_activity">About Activity</string>
</resources>